--- a/Asignaturas/app/src/main/res/layout/activity_main.xml
+++ b/Asignaturas/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Asignaturas"
+        android:text="@string/titulo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.458"
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
         android:layout_marginTop="124dp"
-        android:text="Idiomas"
+        android:text="@string/titulo_idiomas"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="152dp"
         android:layout_marginTop="124dp"
-        android:text="Modulos"
+        android:text="@string/titulo_modulos"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -63,19 +63,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="ingles" />
+            android:text="@string/titulo_ingles" />
 
         <RadioButton
             android:id="@+id/rb_fraces"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="francés" />
+            android:text="@string/titulo_frances" />
 
         <RadioButton
             android:id="@+id/rb_aleman"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="aleman" />
+            android:text="@string/titulo_aleman" />
     </RadioGroup>
 
     <CheckBox
@@ -125,7 +125,7 @@
         android:layout_marginStart="148dp"
         android:layout_marginTop="528dp"
         android:onClick="enviar"
-        android:text="enviar"
+        android:text="@string/titulo_enviar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
