--- a/MisDialogos/app/src/main/res/layout/activity_main.xml
+++ b/MisDialogos/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,23 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.227"
+        app:layout_constraintHorizontal_bias="0.23"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.536" />
+        app:layout_constraintVertical_bias="0.473" />
 
     <Button
         android:id="@+id/mensaje"
         android:layout_width="352dp"
         android:layout_height="46dp"
         android:layout_marginTop="40dp"
+        android:onClick="clickDialogoMensaje"
         android:text="Diálogo mensaje"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,6 +50,7 @@
         android:layout_marginStart="155dp"
         android:layout_marginTop="176dp"
         android:layout_marginEnd="166dp"
+        android:onClick="clickFragmento"
         android:text="Fragmento 2 botones"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
