--- a/MisDialogos/app/src/main/res/layout/activity_main.xml
+++ b/MisDialogos/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,7 @@
         android:layout_marginStart="155dp"
         android:layout_marginTop="252dp"
         android:layout_marginEnd="166dp"
+        android:onClick="clickSeleccion"
         android:text="Selección de idioma"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
@@ -88,6 +89,7 @@
         android:layout_marginStart="155dp"
         android:layout_marginTop="440dp"
         android:layout_marginEnd="166dp"
+        android:onClick="clickPersonalizado"
         android:text="Dialogo personalizado"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
