--- a/MisDialogos/app/src/main/res/layout/activity_main.xml
+++ b/MisDialogos/app/src/main/res/layout/activity_main.xml
@@ -103,6 +103,7 @@
         android:layout_marginStart="155dp"
         android:layout_marginTop="576dp"
         android:layout_marginEnd="166dp"
+        android:onClick="clickHora"
         android:text="Hora"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.473"
@@ -116,6 +117,7 @@
         android:layout_marginStart="155dp"
         android:layout_marginTop="508dp"
         android:layout_marginEnd="166dp"
+        android:onClick="clicKFecha"
         android:text="Fecha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.481"
