--- a/MisDialogos/app/src/main/res/layout/activity_main.xml
+++ b/MisDialogos/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,8 @@
         android:layout_width="119dp"
         android:layout_height="56dp"
         android:layout_marginTop="356dp"
-        android:text="Idioma"
+        android:onClick="clickNombre"
+        android:text="Select nombre"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.808"
         app:layout_constraintStart_toStartOf="parent"
