--- a/Hipoten/HipotenochasClass/app/src/main/res/menu/menu_principaal.xml
+++ b/Hipoten/HipotenochasClass/app/src/main/res/menu/menu_principaal.xml
@@ -2,7 +2,16 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Item" />
-    <item android:title="Item" />
-    <item android:title="Item" />
+    <item
+        android:id="@+id/itemInstrucciones"
+        android:title="Instruciones" />
+    <item
+        android:id="@+id/itemDificultad"
+        android:title="Nivel" />
+    <item
+        android:id="@+id/itemIcono"
+        android:title="Selecionar icono" />
+    <item
+        android:id="@+id/itemNuevoJuego"
+        android:title="Nuevo juego" />
 </menu>
