--- a/Hipoten/HipotenochasClass/app/src/main/res/menu/menu_principaal.xml
+++ b/Hipoten/HipotenochasClass/app/src/main/res/menu/menu_principaal.xml
@@ -7,7 +7,7 @@
         android:title="Instruciones" />
     <item
         android:id="@+id/itemDificultad"
-        android:title="Nivel" />
+        android:title="@string/nivel" />
     <item
         android:id="@+id/itemIcono"
         android:title="Selecionar icono" />
