--- a/ListViewEjercicio/app/src/main/res/layout/activity_secondary.xml
+++ b/ListViewEjercicio/app/src/main/res/layout/activity_secondary.xml
@@ -58,4 +58,13 @@
         app:layout_constraintEnd_toEndOf="@+id/editTextNota"
         app:layout_constraintTop_toBottomOf="@+id/editTextNota" />
 
+    <RatingBar
+        android:id="@+id/ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="75dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonConfirmar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
