--- a/SegundaEva/REPASOFINAL/app/src/main/res/layout/activity_main.xml
+++ b/SegundaEva/REPASOFINAL/app/src/main/res/layout/activity_main.xml
@@ -8,13 +8,40 @@
     tools:context=".MainActivity">
 
 
-    <TextView android:id="@+id/lblEtiqueta"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="166dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="50dp">
+
+
+        <Button
+            android:id="@+id/buttonCrono"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onClickCrono"
+            android:text="Button" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textAlignment="center" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonToast"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:textColor="@color/material_dynamic_primary50"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:text="texto_ejemplo"
-        tools:ignore="MissingConstraints" />
+        android:onClick="onClickToast"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
