--- a/SegundaEva/Biblioteca/app/src/main/res/values/themes.xml
+++ b/SegundaEva/Biblioteca/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Biblioteca" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Biblioteca" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
+        <!-- <style name="Base.Theme.Biblioteca" parent="Theme.AppCompact.DayNight">-->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
